@@ -12,6 +12,8 @@ import br.gov.es.openpmo.model.workpacks.Instrument;
 import br.gov.es.openpmo.utils.PropertyModelInstanceType;
 
 import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -38,7 +40,7 @@ public class CostAccountDto {
     instance.setProperties(getPropertiesFrom(costAccount));
     instance.setModels(getModelsFrom(costAccount));
     instance.setIdCostAccountModel(getIdCostAccountModel(costAccount));
-    instance.setUnidadeOrcamentaria(UnidadeOrcamentariaDto.of(costAccount.getUnidadeOrcamentaria(), null , Set.of(instance)));
+    instance.setUnidadeOrcamentaria(UnidadeOrcamentariaDto.of(costAccount.getUnidadeOrcamentaria(), null , Collections.singleton(instance)));
     instance.setPlanoOrcamentario(PlanoOrcamentarioDto.of(costAccount.getPlanoOrcamentario()));
     instance.setInstruments(costAccount.getInstruments());
     return instance;
